<?xml version="1.0"?>
<package> <!-- Неявно формат 1 -->
  <name>orb_slam3_ros</name>
  <version>0.0.1</version>
  <description>ORB SLAM3 ROS implementation.</description>

  <maintainer email="thienhoangnguyen94@gmail.com">Thien Nguyen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Зависимости сборки -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>         <!-- Добавлено -->
  <build_depend>pcl_conversions</build_depend>  <!-- Добавлено -->

  <!-- Зависимости выполнения -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_ros</run_depend>           <!-- Добавлено -->
  <run_depend>pcl_conversions</run_depend>    <!-- Добавлено -->

  <!-- Удаленные теги <depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  -->

  <export>

  </export>
</package>
